--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,10 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm ci --only=production
 
 COPY . .
 
-EXPOSE 5001
-CMD ["npm", "run", "start"]
+EXPOSE 10000  # ✅ Use dynamic PORT from Render
+
+CMD ["npm", "start"]
